Fix: dark mode text/background colours

--- a/src/renderer/css/lazy/settings-dark.lazy.css
+++ b/src/renderer/css/lazy/settings-dark.lazy.css
@@ -5,7 +5,7 @@
 }
 
 .SettingsPage__spellCheckerLocalesDropdown .SettingsPage__spellCheckerLocalesDropdown__control {
-    background: #242a30;
+    background: #343a40;
 }
 
 .SettingsPage__spellCheckerLocalesDropdown .SettingsPage__spellCheckerLocalesDropdown__menu {
@@ -22,4 +22,13 @@
 
 .SettingsPage__spellCheckerLocalesDropdown .SettingsPage__spellCheckerLocalesDropdown__input-container {
     color: #fff;
+}
+
+.SettingsPage__spellCheckerLocalesDropdown__placeholder span {
+    color: #fff;
+}
+
+.SettingsPage__downloadInput {
+    color: #fff;
+    background: #343a40;
 }
