--- a/src/renderer/css/settings.css
+++ b/src/renderer/css/settings.css
@@ -41,3 +41,7 @@ body {
     margin-left: 16px;
     width: 50%;
 }
+
+.SettingsPage__spellCheckerLocalesDropdown__placeholder span {
+    color: #212529;
+}
